--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                          Currently, I am working in the laboratory of  Dr. Sachin kumar B, IIT Delhi  on a short-term project.
                     </p>
                 </div>
-                        <div class="skills shadow-dark">
+                        <!div class="skills shadow-dark">
                             <ul>
-                                <li class="html">HTML</li>
-                                <li class="css">CSS</li>
-                                <li class="js">JavaScript</li>
+                                <!li class="html"></li>
+                                <!li class="css"></li>
+                                <!li class="js"></li>
 
                             </ul>
                         </div>
