--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     <h3>Hi! I'm pravesh</h3>
                     <div class="social-media">
                         <a href="https://linkedin.com/in/praveshtripathi/" class="social"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        <a href="https://facebook.com/praveshtripathi" target="_blank" class="social"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a href="https://instagram.com/praveshtripathi" target="_blank" class="social"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/PraveshTripathi.8/" class="social"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/pravesh.007/" class="social"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                     </div>
                     <br>
 
