--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <br>
 
-                    <a href="CV.pdf" class="cv">Download CV</a>
+                    <a href="" class="cv">Download CV</a>
                 </div>
             </div>
         </div>
